--- a/index.html
+++ b/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>SEO Dashboard</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>SEO Report Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="container mt-5">
-    <h1 class="mb-4">SEO Report Dashboard</h1>
-    <form method="post" action="/">
+<body class="container py-5">
+    <h1 class="mb-4 text-center">SEO Report Dashboard</h1>
+    <p class="text-center text-muted">Created by Janhvi Shinde — Analyze any website's SEO performance easily.</p>
+
+    <form method="POST" action="/" novalidate>
         <div class="mb-3">
             <label for="url" class="form-label">Enter Website URL</label>
-            <input type="url" class="form-control" id="url" name="url" placeholder="e.g. https://Janhvishinde.com" required>
+            <input type="url" class="form-control" id="url" name="url" 
+                   placeholder="https://www.janhvishinde.com" required 
+                   pattern="https?://.+">
+            <div class="form-text">Make sure your URL starts with http:// or https://</div>
         </div>
-        <button type="submit" class="btn btn-primary">Analyze</button>
+
+        <button type="submit" class="btn btn-primary w-100">
+            🔍 Analyze Website
+        </button>
     </form>
+
+
+    <div class="text-center mt-4" id="loadingSpinner" style="display: none;">
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Analyzing...</span>
+        </div>
+        <p class="mt-2">Analyzing website SEO, please wait...</p>
+    </div>
+
+    
+    <script>
+        const form = document.querySelector('form');
+        form.addEventListener('submit', () => {
+            document.getElementById('loadingSpinner').style.display = 'block';
+        });
+    </script>
 </body>
 </html>
