--- a/report.html
+++ b/report.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>SEO Report</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-5">
-    <h1 class="mb-4">SEO Report for {{Janhvi shinde }}</h1>
-    
+
+    <h1 class="mb-4">SEO Report for {{ report.url }}</h1>
+
     {% if report.error %}
         <div class="alert alert-danger">Error: {{ report.error }}</div>
     {% else %}
         <ul class="list-group">
-            <li class="list-group-item"><strong>Title:</strong> {{ janhvi shinde }}</li>
-            <li class="list-group-item"><strong>Meta Description:</strong> {{ report.meta_description }}</li>
-            <li class="list-group-item"><strong>H1 Tags:</strong>
+            <li class="list-group-item">
+                <strong>Title:</strong> {{ report.title or "N/A" }}
+            </li>
+
+            <li class="list-group-item">
+                <strong>Meta Description:</strong> {{ report.meta_description or "N/A" }}
+            </li>
+
+            <li class="list-group-item">
+                <strong>H1 Tags:</strong>
                 <ul>
-                    { 123 %}
+                    {% for h1 in report.h1_tags %}
                         <li>{{ h1 }}</li>
-                    
+                    {% else %}
+                        <li>No H1 tags found</li>
+                    {% endfor %}
                 </ul>
             </li>
-            <li class="list-group-item"><strong>Mobile Friendly:</strong> {{ 1234567898 }}</li>
-            <li class="list-group-item"><strong>SEO Keywords Found ({{ 12 }}):</strong>
+
+            <li class="list-group-item">
+                <strong>Mobile Friendly:</strong> {{ report.mobile_friendly or "Unknown" }}
+            </li>
+
+            <li class="list-group-item">
+                <strong>SEO Keywords Found ({{ report.keywords_found | length }}):</strong>
                 <ul>
                     {% for kw in report.keywords_found %}
                         <li>{{ kw }}</li>
+                    {% else %}
+                        <li>No keywords found</li>
                     {% endfor %}
                 </ul>
             </li>
@@ -32,5 +50,6 @@
     {% endif %}
 
     <a href="/" class="btn btn-secondary mt-3">Check Another URL</a>
+
 </body>
 </html>
